refactor: Обновление всех тестов